[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/screens/help/Help.gd" type="Script" id=1]
[ext_resource path="res://assets/paste.svg" type="Texture" id=2]
[ext_resource path="res://assets/copy.svg" type="Texture" id=3]

[node name="Help" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.0
margin_top = -446.0
margin_right = 283.0
margin_bottom = 428.0
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 566.0
margin_bottom = 252.0

[node name="Instructions" type="RichTextLabel" parent="VBoxContainer/PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 546.0
margin_bottom = 216.0
text = "You can skip levels by entering a code of a friend! Codes are valid for 24 hours.
Below is your code you can share"
fit_content_height = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 276.0
margin_right = 566.0
margin_bottom = 296.0
rect_min_size = Vector2( 0, 20 )

[node name="CopyContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 320.0
margin_right = 566.0
margin_bottom = 448.0
custom_constants/separation = 15

[node name="Code" type="LineEdit" parent="VBoxContainer/CopyContainer"]
margin_right = 439.0
margin_bottom = 128.0
size_flags_horizontal = 3
text = "880 829"
align = 1
editable = false

[node name="Copy" type="Button" parent="VBoxContainer/CopyContainer"]
margin_left = 454.0
margin_right = 566.0
margin_bottom = 128.0
icon = ExtResource( 3 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 472.0
margin_right = 566.0
margin_bottom = 492.0
rect_min_size = Vector2( 0, 20 )

[node name="PasteContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 516.0
margin_right = 566.0
margin_bottom = 644.0
custom_constants/separation = 15

[node name="EnterCode" type="LineEdit" parent="VBoxContainer/PasteContainer"]
margin_right = 436.0
margin_bottom = 128.0
size_flags_horizontal = 3
align = 1
max_length = 8
placeholder_text = "PASTE_HERE"
caret_blink = true

[node name="Paste" type="Button" parent="VBoxContainer/PasteContainer"]
margin_left = 451.0
margin_right = 566.0
margin_bottom = 128.0
icon = ExtResource( 2 )
icon_align = 1

[node name="Verify" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 728.0
margin_right = 566.0
margin_bottom = 854.0
text = "VERIFY"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 668.0
margin_right = 566.0
margin_bottom = 708.0
rect_min_size = Vector2( 0, 40 )

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 732.0
margin_right = 566.0
margin_bottom = 858.0
text = "BACK"

[connection signal="pressed" from="VBoxContainer/CopyContainer/Copy" to="." method="_on_Copy_pressed"]
[connection signal="text_changed" from="VBoxContainer/PasteContainer/EnterCode" to="." method="_on_EnterCode_text_changed"]
[connection signal="pressed" from="VBoxContainer/PasteContainer/Paste" to="." method="_on_Paste_pressed"]
[connection signal="pressed" from="VBoxContainer/Verify" to="." method="_on_Verify_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
